User authentication implemented. Not secure on http connections. As the database of users doesn't currently exist, the authorizeUser() function just checks to see if the username is "johnny" with password "dichotomy".

--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -3,20 +3,27 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/pretty.css')
+    script(src="/angular.min.js")
     script(src="/jquery-2.2.0.min.js")
     script(src="/javascripts/searchform.js")
+    script(src="/javascripts/authenticate.js")
   body
-    ul.headerbar
-      li.headerlink
-        a(href="/pretty/") Home
-      li.headerlink
-        a Comics
-      ul.headerright
+    div(ng-app="authentication" ng-controller="authController")
+      ul.headerbar
         li.headerlink
-          a Sign In
+          a(href="/pretty/") Home
         li.headerlink
-          input(type=text, value="Search...", onkeypress="searchKeypress(event);" onfocus="searchFocusClear();").search#search
-        li.headerlink
-          a(href="javascript:searchSubmit();").lowpad
-            img(src="/images/headerbar_icon_search.png" alt="Search")
-    block content
+          a Comics
+        ul.headerright
+          li.headerlink(ng-show="!authenticated")
+            a(href="/auth/login")  Sign In
+          li.headerlink(ng-show="authenticated")
+            a(href="/") {{username}}
+          li.headerlink(ng-show="authenticated")
+            a(ng-click="logout()" href="") Sign Out
+          li.headerlink
+            input(type=text, value="Search...", onkeypress="searchKeypress(event);" onfocus="searchFocusClear();").search#search
+          li.headerlink
+            a(href="javascript:searchSubmit();").lowpad
+              img(src="/images/headerbar_icon_search.png" alt="Search")
+      block content
