--- a/views/simpleregister.jade
+++ b/views/simpleregister.jade
@@ -1,16 +1,13 @@
-doctype html
-html
-  head
-    title= title
-    script(src="/angular.min.js")
-    script(src="/jquery-2.2.0.min.js")
-    script(src="/javascripts/searchform.js")
-  body
-    div(ng-app="")
-      h1 register
+extends pretty
+
+block content
+  div(ng-app="authentication" ng-controller="authController")
+    h1 register
+    form
       p username
-        input(type="text" ng-model="user.name" placeholder="Enter name here")
+        input(type="text" ng-model="auth_username" placeholder="Enter name here")
       p password
-        input(type="password" ng-model="password" placeholder="Password" ng-model="user.password")
-      button(ng-click="register()") Register
-      
+        input(type="password" ng-model="auth_password" placeholder="Password")
+      button(ng-click="register()") Register as {{username}}
+    p
+      font(color="red") {{response}}
