Added pretty login/register page
User must also supply email

--- a/public/stylesheets/pretty.css
+++ b/public/stylesheets/pretty.css
@@ -43,3 +43,10 @@ input.search {
   color: white;
   background-color:#111; 
 }
+
+table.auth {
+  background-color:#ddf;
+}
+table.auth td {
+  padding: 2px 8px 2px 8px;
+}
