--- a/views/simplelogin.jade
+++ b/views/simplelogin.jade
@@ -1,17 +1,19 @@
-extends pretty
+extends authentication
 
-block content
+block content_authentication_head
+  h2 Log In
+
+block content_authentication
   div
-   h1 Log In
-   font(size="2")
-     p First time user? 
-       a(href="/auth/register") Sign up
-       | !
-   form
-    p username
-      input(type="text" ng-model="auth_username" placeholder="Enter name here")
-    p password
-      input(type="password" ng-model="auth_password" placeholder="Password")
-    button(ng-click="login()" ng-show="auth_username.length>0") Log in as {{auth_username}}
-  p
-    font(color="red") {{response}}
+    font(size="2")
+      p First time user? 
+        a(href="/auth/register") Sign up
+        | !
+    form
+      p Username
+        input(type="text" ng-model="auth_username" placeholder="Enter name here")
+      p Password
+        input(type="password" ng-model="auth_password" placeholder="Password")
+      button(ng-click="login()" ng-show="auth_username.length>0") Log in as {{auth_username}}
+    p
+      font(color="red") {{response}}
