--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -1,29 +1,21 @@
-doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/pretty.css')
-    script(src="/angular.min.js")
-    script(src="/jquery-2.2.0.min.js")
-    script(src="/javascripts/searchform.js")
-    script(src="/javascripts/authenticate.js")
-  body
-    div(ng-app="authentication" ng-controller="authController")
-      ul.headerbar
-        li.headerlink
-          a(href="/pretty/") Home
-        li.headerlink
-          a Comics
-        ul.headerright
-          li.headerlink(ng-show="!authenticated")
-            a(href="/auth/login")  Sign In
-          li.headerlink(ng-show="authenticated")
-            a(href="/") {{username}}
-          li.headerlink(ng-show="authenticated")
-            a(ng-click="logout()" href="") Sign Out
-          li.headerlink
-            input(type=text, value="Search...", onkeypress="searchKeypress(event);" onfocus="searchFocusClear();").search#search
-          li.headerlink
-            a(href="javascript:searchSubmit();").lowpad
-              img(src="/images/headerbar_icon_search.png" alt="Search")
-      block content
+extends layout
+
+block content_layout
+  ul.headerbar
+    li.headerlink
+      a(href="/pretty/") Home
+    li.headerlink
+      a Comics
+    ul.headerright
+      li.headerlink(ng-show="!authenticated")
+        a(href="/auth/login")  Sign In
+      li.headerlink(ng-show="authenticated")
+        a(href="/") {{username}}
+      li.headerlink(ng-show="authenticated")
+        a(ng-click="logout()" href="") Sign Out
+      li.headerlink
+        input(type=text, value="Search...", onkeypress="searchKeypress(event);" onfocus="searchFocusClear();").search#search
+      li.headerlink
+        a(href="javascript:searchSubmit();").lowpad
+          img(src="/images/headerbar_icon_search.png" alt="Search")
+  block content
