--- a/views/simpleregister.jade
+++ b/views/simpleregister.jade
@@ -1,16 +1,24 @@
-extends pretty
+extends authentication
 
-block content
+block content_authentication_head
+  h2 Register
+
+block content_authentication
   div(ng-app="authentication" ng-controller="authController")
-    h1 Register
+    font(size="2")
+      p Already have an account? 
+        a(href="/auth/login") Sign in
+        | .
     form
-      p username
+      p Username
         input(type="text" ng-model="auth_username" placeholder="Enter name here")
-      p password
+      p Email Address
+        input(type="text" ng-model="auth_email" placeholder="myaddress@example.com")
+      p Password
         input(type="password" ng-model="auth_password" placeholder="Password")
-      p confirm password
+      p Confirm Password
         input(type="password" ng-model="auth_password_confirm" placeholder="Password")
-      p Select user type
+      p Select User Type
         p
           input(type="radio" ng-model="auth_usertype" value="pleb")
           b  Pleb: 
