Fix 404 bug on create comic

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -5,4 +5,4 @@ block content
   ul
     each comic, i in editable
       li
-        a(href="see/" + comic.creator+ "-"+ comic.title)= comic.title
+        a(href="/pretty/see/" + comic.creator + "/" + comic.title)= comic.title
