--- a/views/createcomic.jade
+++ b/views/createcomic.jade
@@ -5,5 +5,7 @@ block content
   form
     p Comic
       input(type="text" ng-model="comic_name" placeholder="Enter name here")
+    p Description  
+      input(type="text" ng-model="comic_description" placeholder="Enter description  here")
     button(ng-click = "create_comic()" ng-show = "comic_name.length>0") Create {{comic_name}}
   
