--- a/views/createcomic.jade
+++ b/views/createcomic.jade
@@ -8,4 +8,6 @@ block content
     p Description  
       input(type="text" ng-model="comic_description" placeholder="Enter description  here")
     button(ng-click = "create_comic()" ng-show = "comic_name.length>0") Create {{comic_name}}
+    p
+      font(color="red") {{response}}
   
