--- a/views/editcomic.jade
+++ b/views/editcomic.jade
@@ -1,10 +1,9 @@
 extends pretty
 
 block content
-	h1.bannertext Edit My Comic
-	body
-		form(method='post', enctype='multipart/form-data', action= '/pretty/file-upload/' + comic_creator + '/' + comic_name)
-			input(type='file', name='thumbnail')
-			input(type='submit')
-		each pic, i in panels
-			img(src= "\\" + pic.path alt="Search")
+	h1.bannertext Edit #{comic_name}
+	form(method='post', enctype='multipart/form-data', action= '/pretty/' + comic_creator + '/comics/' + comic_uri+"/panels")
+		input(type='file', name='image')
+		input(type='submit')
+	each pic, i in panels
+		img(src= "/pretty/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
