--- a/views/newcomic.jade
+++ b/views/newcomic.jade
@@ -2,6 +2,6 @@ extends pretty
 
 block content
 	h1.bannertext=comic_name
-	a(href="/pretty/edit/" + comic_creator + "/" + comic_name, ng-show="isartist") Edit
+	a(href="/pretty/edit/" + comic_creator + "/comics/" + comic_uri, ng-show="isartist") Edit
 	each pic, i in panels
-		img(src= "\\" + pic.path alt="Search")
+		img(src= "/pretty/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
