--- a/views/createcomic.jade
+++ b/views/createcomic.jade
@@ -1,13 +1,14 @@
 extends pretty
 
 block content
-  h1.bannertext= header
-  form
-    p Comic
-      input(type="text" ng-model="comic_name" placeholder="Enter name here")
-    p Description  
-      input(type="text" ng-model="comic_description" placeholder="Enter description  here")
-    button(ng-click = "create_comic()" ng-show = "comic_name.length>0") Create {{comic_name}}
-    p
-      font(color="red") {{response}}
-  
+	h1.bannertext= header
+	form
+		p Comic
+			input(type="text" ng-model="comic_name" placeholder="Enter name here")
+		p Description	
+			input(type="text" ng-model="comic_description" placeholder="Enter description	here")
+		button(ng-click = "create_comic()" ng-show = "comic_name.length>0") Create {{comic_name}}
+		p(ng-show="comic_name.length>0")
+			font(color="gray" size="2") URL: /{{username}}/comics/{{sanitizeName(comic_name)}}
+		p
+			font(color="red") {{response}}
