--- a/views/newcomic.jade
+++ b/views/newcomic.jade
@@ -3,10 +3,10 @@ extends pretty
 block content
 	h1.bannertext=comic_name
 	p
-		a(href="/pretty/edit/" + comic_creator + "/comics/" + comic_uri, ng-show="isartist") Edit
+		a(href="/edit/" + comic_creator + "/comics/" + comic_uri, ng-show="isartist") Edit
 	each pic, i in panels
 		p
-			img(src= "/pretty/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
+			img(src= "/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
 	p
 		a.share(ng-href="#share" ng-click="shlink='#{share_link}'")
 			img(src="/images/icon_share.png" alt="share")
