--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -3,9 +3,9 @@ extends layout
 block content_layout
 	ul.headerbar
 		li.headerlink(ng-show="isartist")
-			a(href="/pretty/create") + Create Comic
+			a(href="/create") + Create Comic
 		li.headerlink
-			a(href="/pretty/") My Dashboard
+			a(href="/") My Dashboard
 		ul.headerright
 			li.headerlink
 				a(href="/") {{username}}
