--- a/views/newcomic.jade
+++ b/views/newcomic.jade
@@ -2,8 +2,9 @@ extends pretty
 
 block content
 	h1.bannertext=comic_name
-	p
-		a(href="/edit/" + comic_creator + "/comics/" + comic_uri, ng-show="isartist") Edit
+	if (editable)
+		p
+			a(href="/edit/" + comic_creator + "/comics/" + comic_uri) Edit
 	each pic, i in panels
 		p
 			img(src= "/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
