--- a/views/newcomic.jade
+++ b/views/newcomic.jade
@@ -2,6 +2,7 @@ extends pretty
 
 block content
 	h1.bannertext=comic_name
+	pi Description: <i>#{description}
 	if (editable)
 		p
 			a(href="/edit/" + comic_creator + "/comics/" + comic_uri) Edit
