Implement (uri) RESTful for comic viewing

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -5,4 +5,4 @@ block content
 	ul
 		each comic, i in comics
 			li
-				a(href="/see/" + comic.creator + "/comics/" + comic.uri)= comic.title
+				a(href=comic.creator + "/comics/" + comic.uri)= comic.title
