--- a/views/createcomic.jade
+++ b/views/createcomic.jade
@@ -9,6 +9,6 @@ block content
 			input(type="text" ng-model="comic_description" placeholder="Enter description here")
 		button(ng-click = "create_comic()" ng-show = "comic_name.length>0") Create {{comic_name}}
 		p(ng-show="comic_name.length>0")
-			font(color="gray" size="2") URL: /{{username}}/comics/{{sanitizeName(comic_name)}}
+			font(color="gray" size="2") URL: /accounts/{{username}}/comics/{{sanitizeName(comic_name)}}
 		p
 			font(color="red") {{response}}
