Add O-O functionality to rudimental Notification

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -12,5 +12,5 @@ block content
 		if(typeof(notifications) !== 'undefined')
 			each notification, i in notifications
 				li
-					=notification
+					=notification.m
 
