--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,16 +1,21 @@
 extends pretty
+- var comics_js = JSON.stringify(comics)
 
 block content
+	form(ng-init="comics=#{comics_js}")
 	h1.bannertext= Dashboard
-	p Created Comics
+	if(isartist == true && notification_length != 0)
+		p Created Comics
+	if(isartist == false && notification_length != 0)
+		p My Comics
 	ul
 		each comic, i in comics
 			li
 				a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
-	p Notifications 
-	ul
-		if(typeof(notifications) !== 'undefined')
+	if(typeof(notifications) !== 'undefined' && notification_length != 0)
+		p Notifications
+		ul
 			each notification, i in notifications
 				li
-					=notification.m
-
+					= notification.timestamp+ ": " + notification.event.id + " (" + notification.msg + ")"
+			
