--- a/views/viewcomic.jade
+++ b/views/viewcomic.jade
@@ -10,9 +10,10 @@ block content_comic
 	if (editable)
 		p
 			a(href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + pageid + "/edit" ) Edit page
-	each pic, i in panels
-		p 
-			img(src= "/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
+	center
+		p(id="page-area" style="width:1000px;border-style: solid;border-color:black;" align="left")
+			each pic, i in panels 
+				img(src= "/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
 	p
 		a.share(ng-href="#share" ng-click="shlink='#{share_link}'")
 			img(src="/images/icon_share.png" alt="share")
