--- a/views/viewcomic.jade
+++ b/views/viewcomic.jade
@@ -11,7 +11,7 @@ block content_comic
 		p
 			a(href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + pageid + "/edit" ) Edit page
 	center
-		p(id="page-area" style="width:1000px;border-style: solid;border-color:black;" align="left")
+		p(id="page-area" style="width:1000px;border-style: solid;border-color:black;background-color:#262626;" align="left")
 			each pic, i in panels 
 				img(src= "/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
 	p
