--- a/public/stylesheets/pretty.css
+++ b/public/stylesheets/pretty.css
@@ -55,3 +55,73 @@ a.share {
   text-decoration: none;
   size: 2;
 }
+
+.commentcontainer {
+  padding:0.01em 16px;
+  border:1px solid black;
+  background-color:#fdf5e6;
+  background-size: 80px 60px;
+  height: auto;
+  max-height: 1000px;
+  margin: auto;
+  width: 75%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  overflow:auto;
+}
+
+#commenttextarea {
+  border:1px solid black;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 3px;
+  max-width: 90%; 
+}
+.comment{
+  border-bottom: 1px solid black;
+  margin: auto;
+}
+
+/* Style The Dropdown Button */
+.dropbtn {
+    background-color: rgb(89, 89, 89);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width:100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 3px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: rgba(89, 89, 89, 0.7);
+}
