--- a/views/viewcomic.jade
+++ b/views/viewcomic.jade
@@ -35,7 +35,18 @@ block content_comment
 			p
 				font(color="red") {{response3}}
 			each comment, i in comments
-				p(class="comment") 
-					|#{comment.username}: 
-					|#{comment.description}  <br />
-					p(style="font-size:10px")|#{comment.postDate}				
+				if comment.adminlevel == 2
+					p(class="comment; purplelevel") 
+						|#{comment.username}: 
+						|#{comment.description}  <br />
+						p(style="font-size:10px")|#{comment.postDate}	
+				else if comment.adminlevel == 1
+					p(class="comment; bluelevel")
+						|#{comment.username}: 
+						|#{comment.description}  <br />
+						p(style="font-size:10px")|#{comment.postDate}	
+				else
+					p(class="comment; pleblevel")
+						|#{comment.username}: 
+						|#{comment.description}  <br />
+						p(style="font-size:10px")|#{comment.postDate}				
