--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -4,6 +4,16 @@ extends pretty
 block content
 	form(ng-init="comics=#{comics_js}")
 	h1.bannertext= Dashboard
+	
+	img(src=avatar)
+	
+	p Description: #{description}
+	p Name: #{name}
+	p Email: #{email}
+	p Location: #{location}
+	p Time Zone: #{timezone}
+	p Subscription: #{subscription}
+
 	if(isartist == true && comics_length != 0)
 		p Created Comics
 	if(isartist == false && comics_length != 0)
@@ -18,4 +28,6 @@ block content
 			each notification, i in notifications
 				li
 					= notification.timestamp+ ": " + notification.event.id + " (" + notification.msg + ")"
-			
+
+	a(href="/editdashboard") Edit Information
+	
