--- a/public/stylesheets/pretty.css
+++ b/public/stylesheets/pretty.css
@@ -63,6 +63,7 @@ a.share {
   background-size: 80px 60px;
   height: auto;
   max-height: 1000px;
+  max-width: 900px;
   margin: auto;
   width: 75%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -75,9 +76,9 @@ a.share {
   border-radius: 3px;
   max-width: 90%; 
 }
-.comment{
-  border-bottom: 1px solid black;
-  margin: auto;
+.timestamp{
+  font-size:10px;
+  border-bottom:1px solid black;
 }
 .purplelevel{
   color: rgb(255, 0, 255); 
@@ -105,6 +106,7 @@ a.share {
 .dropdown {
     position: relative;
     display: inline-block;
+    float: right;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -121,6 +123,7 @@ a.share {
     color: black;
     padding: 3px 16px;
     text-decoration: none;
+    position: right;
     display: block;
 }
 
