--- a/views/editcomic.jade
+++ b/views/editcomic.jade
@@ -50,7 +50,18 @@ block content_comment
 			p
 				font(color="red") {{response3}}
 			each comment, i in editcomments
-				p(class="comment")
-					|#{comment.username}:
-					|#{comment.description}  <br />
-					p(style="font-size:10px")|#{comment.postDate}
+				if comment.adminlevel == 2
+					p(class="comment; purplelevel") 
+						|#{comment.username}: 
+						|#{comment.description}  <br />
+						p(class="timestamp")|#{comment.postDate}	
+				else if comment.adminlevel == 1
+					p(class="comment; bluelevel")
+						|#{comment.username}: 
+						|#{comment.description}  <br />
+						p(class="timestamp")|#{comment.postDate}	
+				else
+					p(class="comment; pleblevel")
+						|#{comment.username}: 
+						|#{comment.description}  <br />
+						p(class="timestamp")|#{comment.postDate}
