--- a/views/editcomic.jade
+++ b/views/editcomic.jade
@@ -13,9 +13,10 @@ block content_comic
 			<input type="hidden" name="page" value="#{pageid}">
 			input(type='submit')
 	center 
-		p(id="page-area" style="width:1000px;border-style:solid;border-color:black;background-color:#262626;" align="left")
-			span(data-ng-repeat="i in utilrange(0,draft.panels.length)")
-				img(ng-src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/{{draft.panels[i]}}" ng-mouseover="mouseover(i)" ng-mouseleave="mouseleave(i,$event)" id="panel{{i}}")
+		div(class="comicpage" style="width:1000px")
+			span(id="page-area" contenteditable="true")
+				span(data-ng-repeat="i in utilrange(0,draft.panels.length)")
+					img(ng-src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/{{draft.panels[i]}}" ng-mouseover="mouseover(i)" ng-mouseleave="mouseleave(i,$event)" id="panel{{i}}")
 	p(ng-show="response.length>0")
 		font(color="red") {{response}}
 	p(ng-show="draft.edited")
