--- a/views/profile.jade
+++ b/views/profile.jade
@@ -6,11 +6,10 @@ block content
 	h1.bannertext= Profile 
 	p #{username} 
 	
-	img(src=avatar)
+	//- img(src=avatar)
 	
 	p Description: #{description}
 	p Name: #{name}
 	p Email: #{email}
 	p Location: #{location}
-	p Time Zone: #{timezone}
 	p Subscription: #{subscription}
