--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -22,9 +22,9 @@ block content
 		p Add Link to Other Sites
 		input(type="text" name="link" placeholder="Enter Link...")
 		p Subscription List
-		input(type="radio" name="subscription" value="show")
+		input(type="radio" name="shouldShowSubscription" value=true)
 		b Show
-		input(type="radio" name="subscription" value="hide")
+		input(type="radio" name="shouldShowSubscription" value=false)
 		b Hide
 		p
 			input(type='submit')
