--- a/views/profile.jade
+++ b/views/profile.jade
@@ -5,11 +5,12 @@ block content
 	form(ng-init="comics=#{comics_js}")
 	h1.bannertext= Profile 
 	p #{username} 
-	
-	//- img(src=avatar)
+	p
+		img(src='/accounts/#{username}/avatar' width=96 border=2)
 	
 	p Description: #{description}
 	p Name: #{name}
 	p Email: #{email}
 	p Location: #{location}
-	p Subscription: #{subscription}
+	if (shouldShowSubscription == true) 
+		p Subscriptions: #{subscriptions}
